objects/FSL__User_Territory__c.object
<CustomObject>
    <description>Which Territories are visible to this user (Default = All)</description>
    <fields>
        <fullName>Accel_Role__c</fullName>
        <description>Currently used to determine what territories a FSL user (manager)  can edit time slots for
@TODO there might be a better way</description>
        <inlineHelpText>Currently used to determine what territories a FSL user (manager)  can edit time slots for</inlineHelpText>
        <label>Accel Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Regional Manager</fullName>
                </value>
                <value>
                    <fullName>Supervisor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSL__ServiceTerritory__c</fullName>
        <label>Service Territory</label>
        <referenceTo>ServiceTerritory</referenceTo>
        <relationshipName>User_Territories</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>FSL__Territory_Name__c</fullName>
        <formula>FSL__ServiceTerritory__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Territory Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSL__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>User_Territories</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>User Territory</label>
    <listViews>
        <fullName>FSL__All_User_Territories</fullName>
        <columns>NAME</columns>
        <columns>FSL__User__c</columns>
        <columns>Accel_Role__c</columns>
        <columns>FSL__ServiceTerritory__c</columns>
        <columns>FSL__Territory_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All User Territories</label>
    </listViews>
    <listViews>
        <fullName>Territory_Managers</fullName>
        <columns>NAME</columns>
        <columns>FSL__User__c</columns>
        <columns>FSL__ServiceTerritory__c</columns>
        <columns>FSL__Territory_Name__c</columns>
        <columns>Accel_Role__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Accel_Role__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Territory Managers</label>
    </listViews>
    <nameField>
        <displayFormat>ULID-{000000}</displayFormat>
        <label>User Territory Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Territories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>